[DISK]Azure DiskHandler 버그 픽스 및 누락사항 적용
1. DiskType 추가 (cloudos_meta.yaml)
2. DiskType "default" 케이스 추가
3. VM 생성시 DataDisk Attach 기능 누락사항 추가
4.  Disk / NLB / MyImage / Cluster ID MaxLength 사항 추가

--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -22,8 +22,9 @@ AZURE:
   credential: ClientId / ClientSecret / TenantId / SubscriptionId
   # type issues: https://github.com/cloud-barista/cb-spider/pull/529#issue-1051678985
   rootdisktype: PremiumSSD / StandardSSD / StandardHDD
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
-  idmaxlength: 64 / 80 / 64 / 80 / 64
+  disktype: PremiumSSD / StandardSSD / StandardHDD
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
+  idmaxlength: 64 / 80 / 64 / 80 / 64 / 80 / 80 / 80 / 63
 
 GCP:
   region: Region / Zone
@@ -46,7 +47,7 @@ ALIBABA:
   disksize: cloud|5|2000|GB / cloud_efficiency|20|32768|GB / cloud_ssd|20|32768|GB / cloud_essd_PL0|40|32768|GB / cloud_essd_PL1|20|32768|GB / cloud_essd_PL2|461|32768|GB / cloud_essd_PL3|1261|32768|GB
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
   idmaxlength: 128 / 128 / 128 / 128 / 128 / 128 / 80 / 128 / 63
-  
+
 
 TENCENT:
   region: Region / Zone
@@ -77,13 +78,13 @@ CLOUDIT:
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
   idmaxlength: 0 / 45 / 45 / 0 / 45 / 45 / 45 / 45 / 45
 
-NCP: 
+NCP:
   region: Region / Zone
   credential: ClientId / ClientSecret
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
   idmaxlength: 0 / 0 / 0 / 30 / 30
-  
-NCPVPC: 
+
+NCPVPC:
   region: Region / Zone
   credential: ClientId / ClientSecret
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
@@ -92,7 +93,7 @@ NCPVPC:
 KTCLOUD:
   region: Region / Zone
   credential: ClientId / ClientSecret
-  
+
 NHNCLOUD:
   region: Region
   credential: IdentityEndpoint / Username / Password / DomainName / TenantId
