--- a/test/nginx-install-test-cli/common/setup.env
+++ b/test/nginx-install-test-cli/common/setup.env
@@ -6,9 +6,9 @@ SUBNET_NAME=${PREFIX}-subnet-01
 SUBNET_CIDR=192.168.0.0/24
 
 SG_NAME=${PREFIX}-SG01
-KEYPAIR_NAME=$1-keypair-01
+KEYPAIR_NAME=${PREFIX}-keypair-01
 
-VM_NAME=${PREFIX}-VM
+VM_NAME=${PREFIX}-VM-$1
 
 
 # env for spctl
