--- a/setup.env
+++ b/setup.env
@@ -12,7 +12,7 @@ export CBSPIDER_ROOT=`cd $SCRIPT_DIR && pwd`
 
 # examples for K8S env
 #export SERVER_ADDRESS=":1024"
-export SERVICE_ADDRESS="172.24.71.242"
+#export SERVICE_ADDRESS="1.2.3.4:31024"
 
 ### Set the library type of Cloud Driver pkg. 
 # ON is a shared library type.
