Update cloudos_meta.yaml for NCP and cloudos.yaml

--- a/cloud-driver-libs/cloudos.yaml
+++ b/cloud-driver-libs/cloudos.yaml
@@ -8,9 +8,7 @@
 # by CB-Spider Team, 2020.11.
 # by CB-Spider Team, 2020.03.
 
-
 ### List of support CloudOS.
-
 cloudos:
   - AWS
   - AZURE
@@ -22,11 +20,11 @@ cloudos:
   - CLOUDIT
   - NCP
   - NCPVPC
-  - KTCLOUD
   - NHNCLOUD
+  - KTCLOUD
+  - KTCLOUDVPC  
 #--- PoC
   - DOCKER
 #--- Emulation
   - MOCK
   - CLOUDTWIN
-
