--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ cloud-control-manager/cloud-driver/drivers/openstack/main/conf/config.yaml
 cloud-control-manager/cloud-driver/drivers/tencent/main/conf/testConfigTencent.yaml
 cloud-control-manager/cloud-driver/drivers/ncp/main/config/config.yaml
 cloud-control-manager/cloud-driver/drivers/ncpvpc/main/config/config.yaml
+cloud-control-manager/cloud-driver/drivers/nhncloud/main/conf/config.yaml
