--- a/.gitignore
+++ b/.gitignore
@@ -59,9 +59,11 @@ utils/clone-mc-meta-info/vm-image/az-data/*
 
 cloud-control-manager/cloud-driver/drivers/azure/main/conf/config.yaml
 cloud-control-manager/cloud-driver/drivers/cloudit/main/conf/config.yaml
+cloud-control-manager/cloud-driver/drivers/ibm/main/conf/config.yaml
 cloud-control-manager/cloud-driver/drivers/ibmcloud-vpc/main/conf/config.yaml
 cloud-control-manager/cloud-driver/drivers/openstack/main/conf/config.yaml
 cloud-control-manager/cloud-driver/drivers/tencent/main/conf/testConfigTencent.yaml
 cloud-control-manager/cloud-driver/drivers/ncp/main/config/config.yaml
 cloud-control-manager/cloud-driver/drivers/ncpvpc/main/config/config.yaml
 cloud-control-manager/cloud-driver/drivers/nhncloud/main/conf/config.yaml
+cloud-control-manager/cloud-driver/drivers/ktcloud/main/config/config.yaml
