Add alias for local driver

--- a/develop.env
+++ b/develop.env
@@ -30,13 +30,17 @@ alias cdaws='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/aws'
 alias cdgcp='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/gcp'
 alias cdazure='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/azure'
 alias cdalibaba='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/alibaba'
+alias cdtencent='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/tencent'
 alias cdopenstack='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/openstack'
 alias cdcloudit='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/cloudit'
+alias cdibm='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/ibmcloud-vpc'
+alias cdnhn='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/nhncloud'
+alias cdncp='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/ncp'
+alias cdncpvpc='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/ncpvpc'
+alias cdkt='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/ktcloud'
+
 alias cddocker='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/docker'
 alias cdmock='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/mock'
-alias cdtencent='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/tencent'
-alias cdibm='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/ibmcloud-vpc'
-alias cdmini='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/mini'
 
 # AdminWeb
 alias cdadminweb='cd $CBSPIDER_ROOT/api-runtime/rest-runtime/admin-web'
