--- a/.github/workflows/korean-checker.yaml
+++ b/.github/workflows/korean-checker.yaml
@@ -101,7 +101,7 @@ jobs:
         if: steps.check-korean.outputs.KOREAN_EXISTS == 'true'
         uses: actions/github-script@v7
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{secrets.CB_GITHUB_ROBOT_PAT}}
           script: |
             const fs = require('fs');
             const path = require('path');
