--- a/cloud-control-manager/cloud-driver/drivers/ktcloudvpc/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/ktcloudvpc/main/conf/config.yaml.sample
@@ -14,7 +14,7 @@ ktcloudvpc:
   project_id: XXXXXXXXXX
   # $$$ For 'V3' verson auth., identity_endpoint, username, password and domain_name are required basically.
   # $$$ But, need 'project_id' for the token role
-  # You can get the prject id on 'Token' > 'Token' menu on KT Cloud Portal
+  # You can get the prject id on 'Servers' > 'Token' > 'Token' menu on KT Cloud Portal
 
   region: KR1
   zone: DX-M1
