--- a/cloud-control-manager/cloud-driver/drivers/azure/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/azure/main/conf/config.yaml.sample
@@ -4,6 +4,7 @@ azure:
   client_secret: TBD
   subscription_id: TBD
   location: TBD
+  zone: TBD
   resources:
     image:
       nameId: Canonical:UbuntuServer:18.04-LTS:18.04.201804262
