Add IID_MGMT_MODE environment variable and API argument to turn off ID transformation

--- a/setup.env
+++ b/setup.env
@@ -19,6 +19,10 @@ export CBSPIDER_ROOT=`cd $SCRIPT_DIR && pwd`
 # default: OFF (will be deprecated)
 export PLUGIN_SW=OFF
 
+## If the value is OFF, Spider does not perform ID transformation.
+# default: ON
+export ID_MGMT_MODE=ON
+
 # root path of cb-log
 export CBLOG_ROOT=$CBSPIDER_ROOT
 
@@ -26,6 +30,6 @@ export CBLOG_ROOT=$CBSPIDER_ROOT
 # default: OFF
 export DOCKER_POC_TEST=OFF
 
-# if value is empty, REST Auth disabed.
+# If the value is empty, REST Auth disabed.
 export API_USERNAME=
 export API_PASSWORD=
