--- a/setup.env
+++ b/setup.env
@@ -21,7 +21,7 @@ export PLUGIN_SW=OFF
 
 ## If the value is OFF, Spider does not perform ID transformation.
 # default: ON
-export ID_TRANSFORM_MODE=ON
+export IDTransformMode=ON
 
 # root path of cb-log
 export CBLOG_ROOT=$CBSPIDER_ROOT
