Update NHN Cloud identity_endpoint

--- a/cloud-control-manager/cloud-driver/drivers/nhncloud/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/nhncloud/main/conf/config.yaml.sample
@@ -1,6 +1,6 @@
 ## Config for NHN Cloud ##
 nhncloud:
-  identity_endpoint: https://api-identity.infrastructure.cloud.toast.com
+  identity_endpoint: https://api-identity-infrastructure.nhncloudservice.com
   nhn_username: ex) ~~~@~~~.com
   api_password: 
     # API 비밀번호 값 입력
