Add more CSP test case and enhance test scripts

--- a/test/vm-cb-user-validation-cli/common/nhncloud/setup.env
+++ b/test/vm-cb-user-validation-cli/common/nhncloud/setup.env
@@ -1,4 +1,7 @@
 CONN_CONFIG=nhncloud-korea-pangyo-config
 IMAGE_NAME=5396655e-166a-4875-80d2-ed8613aa054f
 #SPEC_NAME=m2.c4m8 // error reported: https://github.com/cloud-barista/nhncloud/issues/30
-SPEC_NAME=u2.c2m4
+SPEC_NAME=m2.c4m8
+
+VPC_CSP_ID=cac5d46f-87b5-4015-adfe-b66a06e225a3
+SUBNET_CSP_ID=86af83b0-844d-4bd2-9d64-9f922e4e5f0d
