--- a/test/vm-cb-user-validation-cli/common/ncp/setup.env
+++ b/test/vm-cb-user-validation-cli/common/ncp/setup.env
@@ -2,5 +2,4 @@ CONN_CONFIG=ncp-korea1-config
 IMAGE_NAME=SPSW0LINUX000130
 SPEC_NAME=SPSVRHICPUSSD002
 
-
-SG_NAME=default-sg-01
+SG_NAME=spider-sg01
