Refine test scripts and change the initial image id of Alibaba

--- a/test/vm-cb-user-validation-cli/common/setup.env
+++ b/test/vm-cb-user-validation-cli/common/setup.env
@@ -2,9 +2,11 @@ PREFIX=SPIDER-VM-SSH-Test
 
 
 VPC_NAME=${PREFIX}-vpc-01
-VPC_CIDR=192.168.0.0/16
+#VPC_CIDR=192.168.0.0/16
+VPC_CIDR=10.25.0.0/16
 SUBNET_NAME=${PREFIX}-subnet-01
-SUBNET_CIDR=192.168.1.0/24
+#SUBNET_CIDR=192.168.1.0/24
+SUBNET_CIDR=10.25.7.0/24
 SG_NAME=${PREFIX}-SG01
 KEYPAIR_NAME=${PREFIX}-keypair-01
 
