--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -43,6 +43,7 @@ GCP:
 ALIBABA:
   region: Region / Zone
   credential: ClientId / ClientSecret
+  credential_csp_format: AccessKeyId / AccessKeySecret
   rootdisktype: cloud_essd / cloud_efficiency / cloud / cloud_ssd
   #rootdisktype: cloud_efficiency / cloud / cloud_ssd
   rootdisksize: cloud_essd|20|32768|GB / cloud_efficiency|20|32768|GB / cloud|5|2000|GB / cloud_ssd|20|32768|GB
@@ -56,6 +57,7 @@ ALIBABA:
 TENCENT:
   region: Region / Zone
   credential: ClientId / ClientSecret
+  credential_csp_format: SecretId / SecretKey
   #rootdisktype: CLOUD_PREMIUM / LOCAL_BASIC / LOCAL_SSD / CLOUD_BASIC / CLOUD_SSD
   rootdisktype: CLOUD_PREMIUM / CLOUD_SSD
   rootdisksize: CLOUD_PREMIUM|50|16000|GB / CLOUD_SSD|50|16000|GB
@@ -68,18 +70,21 @@ TENCENT:
 IBM:
   region: Region / Zone
   credential: ApiKey
+  credential_csp_format: ApiKey
   #idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
   idmaxlength: 63 / 63 / 63 / 63 / 63 / 63 / 63 / 63 / 63
 
 OPENSTACK:
   region: Region
   credential: IdentityEndpoint / Username / Password / DomainName / ProjectID
+  credential_csp_format: IdentityEndpoint / Username / Password / DomainName / ProjectID
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage
   idmaxlength: 255 / 255 / 255 / 255 / 255 / 255 / 255 / 255
 
 CLOUDIT:
   region: Region
   credential: IdentityEndpoint / AuthToken / Username / Password / TenantId / ClusterId
+  credential_csp_format: IdentityEndpoint / AuthToken / Username / Password / TenantId / ClusterId
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
   idmaxlength: 0 / 45 / 45 / 0 / 45 / 45 / 45 / 45 / 45
 
@@ -108,6 +113,7 @@ NCPVPC:
 NHNCLOUD:
   region: Region / Zone
   credential: IdentityEndpoint / Username / Password / DomainName / TenantId
+  credential_csp_format: IdentityEndpoint / Username / Password / DomainName / TenantId
   rootdisktype: General_HDD / General_SSD
   rootdisksize: General_HDD|20|1000|GB / General_SSD|20|1000|GB
   disktype: General_HDD / General_SSD
@@ -118,6 +124,7 @@ NHNCLOUD:
 KTCLOUD:
   region: Region / Zone
   credential: ClientId / ClientSecret
+  credential_csp_format: apikey / secretkey
   rootdisktype: HDD / SSD
   rootdisksize: HDD|20|50|GB / SSD|20|50|GB
   disktype: HDD / SSD-Provisioned
@@ -128,6 +135,7 @@ KTCLOUD:
 KTCLOUDVPC:
   region: Region / Zone
   credential: IdentityEndpoint / Username / Password / DomainName / ProjectID
+  credential_csp_format: IdentityEndpoint / Username / Password / DomainName / ProjectID
   rootdisktype: HDD / SSD
   rootdisksize: HDD|50|100|GB / SSD|50|100|GB
   disktype: HDD / SSD
@@ -140,12 +148,15 @@ KTCLOUDVPC:
 DOCKER:
   region: Region
   credential: Host / APIVersion
+  credential_csp_format: Host / APIVersion
+
 
 #--- Emulation
 
 MOCK:
   region: Region
   credential: MockName
+  credential_csp_format: MockName
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
   idmaxlength: 255 / 255 / 255 / 255 / 255 / 255 / 255 / 255 / 255
   rootdisktype: SSD /HDD / MEM
@@ -155,4 +166,5 @@ MOCK:
 CLOUDTWIN:
   region: Region
   credential: IdentityEndpoint / DomainName / MockName
+  credential_csp_format: IdentityEndpoint / DomainName / MockName
 
