--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -25,10 +25,20 @@ jobs:
       matrix:
         go-version: ["1.23"]
         os: [ubuntu-22.04]
-        #os: [ubuntu-22.04, ubuntu-20.04, windows-2022, windows-2019]
     runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v4
+
+      # Cache Go modules
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -58,7 +68,16 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
+      # Cache Docker layers
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-docker-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-docker-
+
       - name: Build image
         env:
           IMAGE_NAME: ${{ github.event.repository.name }}
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+        run: docker build --file Dockerfile --tag $IMAGE_NAME --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache .
