--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -68,6 +68,10 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
+      # Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       # Cache Docker layers
       - name: Cache Docker layers
         uses: actions/cache@v4
@@ -80,4 +84,8 @@ jobs:
       - name: Build image
         env:
           IMAGE_NAME: ${{ github.event.repository.name }}
-        run: docker build --file Dockerfile --tag $IMAGE_NAME --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache .
+        run: |
+          docker buildx build --file Dockerfile --tag $IMAGE_NAME \
+            --cache-from=type=local,src=/tmp/.buildx-cache \
+            --cache-to=type=local,dest=/tmp/.buildx-cache \
+            --load .
