Add defaultRegionToQuery configuration in cloud_meta.yaml for IBM

--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -73,6 +73,7 @@ IBM:
   credentialcsp: ApiKey
   #idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
   idmaxlength: 63 / 63 / 63 / 63 / 63 / 63 / 63 / 63 / 63
+  defaultregiontoquery: us-south / us-south-1
 
 OPENSTACK:
   region: Region
