Add cli Makefile and update cli documentations.

--- a/develop.env
+++ b/develop.env
@@ -45,10 +45,8 @@ alias cdmock='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/mock'
 # AdminWeb
 alias cdadminweb='cd $CBSPIDER_ROOT/api-runtime/rest-runtime/admin-web'
 
-# interface
-alias cdif='cd $CBSPIDER_ROOT/interface'
-alias cdcliex='cd $CBSPIDER_ROOT/interface/cli-examples'
-alias cdapi='cd $CBSPIDER_ROOT/interface/api'
+# cli spctl
+alias cdcli='cd $CBSPIDER_ROOT/cli'
 
 # 
 PATH="$CBSPIDER_ROOT/cli:$PATH"
