Add version info to spctl, accessible with spctl -v (or --version)

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -1,15 +1,22 @@
+VERSION := $(shell git describe --tags --abbrev=8 | sed 's/-g.*//')
+COMMIT_SHA := $(shell git rev-parse --short HEAD)
+BUILD_TIME := $(shell date)
+
 default:
+	@echo "VERSION: $(VERSION)"
+	@echo "COMMIT_SHA: $(COMMIT_SHA)"
+	@echo "BUILD_TIME: $(BUILD_TIME)"
 	@echo -e '\t[CB-Spider] build spctl...'
 	@go mod download
 	@go mod tidy
 	@cp ../api/swagger.json ./cmd
-	@go build -ldflags="-X 'github.com/cloud-barista/cb-spider/cli/cmd.Version=v0.9.4' \
-		-X 'github.com/cloud-barista/cb-spider/cli/cmd.CommitSHA=`(git rev-parse --short HEAD)`' \
-		-X 'github.com/cloud-barista/cb-spider/cli/cmd.User=`(id -u -n)`' \
-		-X 'github.com/cloud-barista/cb-spider/cli/cmd.Time=`(date)`'" \
+	@go build -ldflags="-X 'github.com/cloud-barista/cb-spider/cli/cmd.Version=$(VERSION)' \
+		-X 'github.com/cloud-barista/cb-spider/cli/cmd.CommitSHA=$(COMMIT_SHA)' \
+		-X 'github.com/cloud-barista/cb-spider/cli/cmd.BuildTime=$(BUILD_TIME)'" \
 		-o ./spctl spctl.go
 	@rm ./cmd/swagger.json
 
 clean clear:
 	@echo -e '\t[CB-Spider] cleaning...'
 	@rm -rf ./spctl
+
